Add ModelObserver and observer tests for Account
As a side-effect ObservableModel::{will,did}ChangeValueForKeyEvent were
changed to Poco::BasicEvent<const string>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,6 +9,17 @@ link_directories(
 )
 
 #
+# Account
+#
+
+add_executable(TestAccount TestAccount.cpp)
+target_link_libraries(TestAccount
+  ${OC_LIB_NAME}
+  ${GTEST_LIBS}
+)
+add_test(TestAccount TestAccount)
+
+#
 # DocumentController
 #
 
