Add test for AccountsMeta and event firing
Related changes:
* extracted TestModelObserver into separate class, shared between tests
* removed const from getAccountsMeta() return value: not needed since
there are no public setters in AccountsMeta anyways. It was causing
issues to attach the TestModelObserver since adding an event delegate is
technically modifying the object.
* now odb-related code uses setter methods in Account class

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(GTEST_LIBS gtest gtest_main)
 set(GMOCK_LIBS gmock gmock_main)
+
 include_directories(
   ${GTEST_INCLUDE_DIRS}
 )
@@ -12,7 +13,10 @@ link_directories(
 # Account
 #
 
-add_executable(TestAccount TestAccount.cpp)
+add_executable(TestAccount
+  TestAccount.cpp
+  support/TestModelObserver.cpp
+)
 target_link_libraries(TestAccount
   ${OC_LIB_NAME}
   ${GTEST_LIBS}
@@ -23,7 +27,10 @@ add_test(TestAccount TestAccount)
 # DocumentController
 #
 
-add_executable(TestDocumentController TestDocumentController.cpp)
+add_executable(TestDocumentController
+  TestDocumentController.cpp
+  support/TestModelObserver.cpp
+)
 target_link_libraries(TestDocumentController
   ${OC_LIB_NAME}
   ${GTEST_LIBS}
