Prepare POCO for cross-compiling to iOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ project(${OC_PROJECT_NAME} CXX)
 option(OC_DEBUG "Build a debug version of ${OC_PROJECT_NAME} and its dependencies (default: build a release version)." OFF)
 option(OC_STATIC "Build a static version of ${OC_PROJECT_NAME} and its dependencies (default: build a dynamic/shared version)." OFF)
 option(OC_TESTS "Build all of ${OC_PROJECT_NAME}'s unit tests (default: OFF; except when OC_DEBUG was enabled, then it is always ON)." OFF)
+set(OC_TARGET "current" CACHE STRING "Build ${OC_PROJECT_NAME} for a particular target. Options are 'ios', 'android' or 'current' (default: current platform).")
 
 if(OC_DEBUG)
   set(CMAKE_BUILD_TYPE "Debug")
@@ -14,6 +15,27 @@ if(OC_DEBUG)
 else()
   set(CMAKE_BUILD_TYPE "Release")
 endif(OC_DEBUG)
+
+if(OC_TARGET STREQUAL "current")
+  set(OC_TARGET_CURRENT ON)
+elseif(OC_TARGET STREQUAL "ios")
+  set(OC_TARGET_IOS ON)
+elseif(OC_TARGET STREQUAL "android")
+  set(OC_TARGET_ANDROID ON)
+else()
+  message(FATAL_ERROR "OC_TARGET set to invalid value: '${OC_TARGET}'")
+endif()
+
+if(OC_TARGET_IOS OR OC_TARGET_ANDROID)
+  if(NOT OC_STATIC)
+    set(OC_STATIC ON)
+    message(WARNING "Setting OC_STATIC to ON for OC_TARGET '${OC_TARGET}'")
+  endif()
+  if(OC_TESTS)
+    set(OC_TESTS OFF)
+    message(WARNING "Setting OC_TESTS to OFF for OC_TARGET '${OC_TARGET}'")
+  endif()
+endif()
 
 if(OC_STATIC)
   set(BUILD_SHARED_LIBS OFF)
@@ -24,6 +46,7 @@ endif(OC_STATIC)
 message(STATUS "OC_DEBUG: ${OC_DEBUG}")
 message(STATUS "OC_STATIC: ${OC_STATIC}")
 message(STATUS "OC_TESTS: ${OC_TESTS}")
+message(STATUS "OC_TARGET: ${OC_TARGET}")
 
 # -Wno-unknown-pragmas needed due to libodb custom #pragma db
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -stdlib=libc++ -Wno-unknown-pragmas")
