Build universal POCO for target ios
Detailed list of changes:
- Build universal (armv7 and i386) POCO for target ios (armv7 for the device
  and i386 for the simulator)
- Enable OC_STATIC by default
- Disable tests by default, even when OC_DEBUG enabled
- Replace "current" by "host" to build for currently running target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,19 +5,18 @@ set(OC_PROJECT_NAME "lib${OC_LIB_NAME}")
 project(${OC_PROJECT_NAME} CXX)
 
 option(OC_DEBUG "Build a debug version of ${OC_PROJECT_NAME} and its dependencies (default: build a release version)." OFF)
-option(OC_STATIC "Build a static version of ${OC_PROJECT_NAME} and its dependencies (default: build a dynamic/shared version)." OFF)
-option(OC_TESTS "Build all of ${OC_PROJECT_NAME}'s unit tests (default: OFF; except when OC_DEBUG was enabled, then it is always ON)." OFF)
-set(OC_TARGET "current" CACHE STRING "Build ${OC_PROJECT_NAME} for a particular target. Options are 'ios', 'android' or 'current' (default: current platform).")
+option(OC_STATIC "Build a static version of ${OC_PROJECT_NAME} and its dependencies (default: enabled)." ON)
+option(OC_TESTS "Build all of ${OC_PROJECT_NAME}'s unit tests (default: OFF)." OFF)
+set(OC_TARGET "host" CACHE STRING "Build ${OC_PROJECT_NAME} for a particular target. Options are 'ios', 'android' or 'host' (default: host platform).")
 
 if(OC_DEBUG)
   set(CMAKE_BUILD_TYPE "Debug")
-  set(OC_TESTS ON)
 else()
   set(CMAKE_BUILD_TYPE "Release")
 endif(OC_DEBUG)
 
-if(OC_TARGET STREQUAL "current")
-  set(OC_TARGET_CURRENT ON)
+if(OC_TARGET STREQUAL "host")
+  set(OC_TARGET_HOST ON)
 elseif(OC_TARGET STREQUAL "ios")
   set(OC_TARGET_IOS ON)
 elseif(OC_TARGET STREQUAL "android")
