Add support for multi-platform builds
`./build.sh` is now the default entry point into building libopencash. Cmake
seemed limited and cumbersome for the type of functionality required by
multi-platform and universal builds. Going with an external shell script is
less portable but saved some headache for now.

Currently `./build.sh` automates the following tasks:

  - building for multiple platforms,
  - aggregating static libs into a single lib archive,
  - and creating universal lib archives for the platforms 'ios-universal'
    'osx-ios-universal'.

In cmake, OC_TARGET was renamed to OC_PLATFORM. That seemed like a more
appropriate word to represent the combination of target architecture and OS.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(OC_PROJECT_NAME "lib${OC_LIB_NAME}")
 option(OC_DEBUG "Build a debug version of ${OC_PROJECT_NAME} and its dependencies (default: build a release version)." OFF)
 option(OC_STATIC "Build a static version of ${OC_PROJECT_NAME} and its dependencies (default: enabled)." ON)
 option(OC_TESTS "Build all of ${OC_PROJECT_NAME}'s unit tests (default: OFF)." OFF)
-set(OC_TARGET "host" CACHE STRING "Build ${OC_PROJECT_NAME} for a particular target. Options are 'ios', 'iossimulator', 'android' or 'host' (default: host platform).")
+set(OC_PLATFORM "host" CACHE STRING "Build ${OC_PROJECT_NAME} for a particular platform. Options are 'host', 'ios-device' or 'ios-simulator' (default: host).")
 
 if(OC_DEBUG)
   set(CMAKE_BUILD_TYPE "Debug")
@@ -15,26 +15,24 @@ else()
   set(CMAKE_BUILD_TYPE "Release")
 endif(OC_DEBUG)
 
-if(OC_TARGET STREQUAL "host")
-  set(OC_TARGET_HOST ON)
-elseif(OC_TARGET STREQUAL "ios")
-  set(OC_TARGET_IOS ON)
-elseif(OC_TARGET STREQUAL "iossimulator")
-  set(OC_TARGET_IOSSIMULATOR ON)
-elseif(OC_TARGET STREQUAL "android")
-  set(OC_TARGET_ANDROID ON)
+if(OC_PLATFORM STREQUAL "host")
+  set(OC_PLATFORM_HOST ON)
+elseif(OC_PLATFORM STREQUAL "ios-device")
+  set(OC_PLATFORM_IOS_DEVICE ON)
+elseif(OC_PLATFORM STREQUAL "ios-simulator")
+  set(OC_PLATFORM_IOS_SIMULATOR ON)
 else()
-  message(FATAL_ERROR "OC_TARGET set to invalid value: '${OC_TARGET}'")
+  message(FATAL_ERROR "OC_PLATFORM set to invalid value: '${OC_PLATFORM}'")
 endif()
 
-if(OC_TARGET_IOS OR OC_TARGET_IOSSIMULATOR OR OC_TARGET_ANDROID)
+if(OC_PLATFORM_IOS_DEVICE OR OC_PLATFORM_IOS_SIMULATOR)
   if(NOT OC_STATIC)
     set(OC_STATIC ON)
-    message(WARNING "Setting OC_STATIC to ON for OC_TARGET '${OC_TARGET}'")
+    message(WARNING "Setting OC_STATIC to ON for OC_PLATFORM '${OC_PLATFORM}'")
   endif()
   if(OC_TESTS)
     set(OC_TESTS OFF)
-    message(WARNING "Setting OC_TESTS to OFF for OC_TARGET '${OC_TARGET}'")
+    message(WARNING "Setting OC_TESTS to OFF for OC_PLATFORM '${OC_PLATFORM}'")
   endif()
 endif()
 
@@ -44,8 +42,8 @@ else()
   set(BUILD_SHARED_LIBS ON)
 endif(OC_STATIC)
 
-if(OC_TARGET_IOS OR OC_TARGET_IOSSIMULATOR)
-  if(OC_TARGET_IOS)
+if(OC_PLATFORM_IOS_DEVICE OR OC_PLATFORM_IOS_SIMULATOR)
+  if(OC_PLATFORM_IOS_DEVICE)
     set(IOS_PLATFORM "OS")
   else()
     set(IOS_PLATFORM "SIMULATOR")
@@ -75,7 +73,7 @@ set(OC_INSTALL_LIB_DIR ${OC_INSTALL_DIR}/lib)
 message(STATUS "OC_DEBUG: ${OC_DEBUG}")
 message(STATUS "OC_STATIC: ${OC_STATIC}")
 message(STATUS "OC_TESTS: ${OC_TESTS}")
-message(STATUS "OC_TARGET: ${OC_TARGET}")
+message(STATUS "OC_PLATFORM: ${OC_PLATFORM}")
 #message(STATUS "CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
 
 include_directories(
